Created Header / First Section and Second Section

--- a/index.html
+++ b/index.html
@@ -3,12 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <h1> hello World</h1>
-    <b>Hola</b>
-    
+    <div class="header">
+        <div class="left">
+            <div class="logo">
+                Header Logo
+            </div>  
+        </div>
+        <div class="right">
+            <ul class="links">
+                <li><a href="google.com">link-one</a></li>
+                <li><a href="google.com">link-two</a></li>
+                <li><a href="google.com">link-three</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="row">
+        <div class="section-1">
+            <h1>Welcome to My Landing Page</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni repellat alias veniam repudiandae. Excepturi officiis culpa veniam.</p>
+            <button class="button-1">Sign Up</button>
+        </div>
+        <div class="section-1 image">
+            <h1>Image</h1>
+        </div>    
+    </div> 
+
+    <div class="title"><h2>Some random information.</h2></div>
+    <div class="container">
+        <div class="info">
+          <div class="box"></div>
+          <div class="text">This is a type of plant. We love this one.</div>
+        </div>
+        <div class="info">
+            <div class="box"></div>
+          <div class="text">This is another type of plant. Isn't it nice?</div>
+        </div>
+        <div class="info">
+            <div class="box"></div>
+          <div class="text">We have so many plants. Yay plants.</div>
+        </div>
+        <div class="info">
+            <div class="box"></div>
+          <div class="text">I'm running out of things to say about plants.</div>
+        </div>
+      </div>
+
 </body>
 </html>
