Project: Landing Page Completed!

--- a/index.html
+++ b/index.html
@@ -53,5 +53,24 @@
         </div>
       </div>
 
+      <div class="section-2">
+            <blockquote class="quoteblock">Creativity is just connecting things. When you ask creative people how they did something, they feel a little guilty because they didn't really do it, they just saw something. It seemed obvious to them after a while. 
+                That's because they were able to connect experiences they've had and synthesize new things.
+                <div class="credit">&mdash;Ahmad Albab</div>
+            </blockquote>
+      </div>
+
+    
+    <div class="row-2">
+            <div class="modal">
+                <div class="title-cta">What are you waiting for? It's time!
+                    <div class="text-cta">Sign up to our newsletter for stay update with us!</div>
+                </div>
+                <button class="button-2">Sign Up</button>
+            </div>
+     </div>
+
+     <div class="footer">Copyright &copy The Odin Project by Danial 2024</div>
+   
 </body>
 </html>
