add test on line 74

--- a/index.html
+++ b/index.html
@@ -71,6 +71,6 @@
      </div>
 
      <div class="footer">Copyright &copy The Odin Project by Danial 2024</div>
-   
+    <p> test</p>
 </body>
 </html>
